changed some colors, and fixed backdrop blur not appearing on mobile phone navigation

--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,13 @@
     --sec-color-1: #f1f1f1;
     --sec-color-2: #f5f5f5;
 
-    --accent-color-1:  #ffA888;
-    --accent-color-2:  #00ffe7;
+    --accent-color-1:  #0088ff;
+    --accent-color-2:  #FF9900;
 
     --font-poppins: "Poppins", sans-serif;
     --font-inter: "Inter", sans-serif;
 
     font-family: var(--font-poppins);
-
-    padding: 16px;
 }
 
 html {
@@ -33,18 +31,16 @@ header {
     justify-content: space-between;
     color: var(--pri-color-1);
 
-    border: 1px solid var(--pri-color-1);
+    border: 1px solid rgba(127, 127, 127, .5);
 
-    background-color: var(--sec-color-1);
+    background-color: rgba(255,255,255, .25);
 
-    /*background: linear-gradient(var(--sec-color-1), var(--sec-color-2));*/
-
-    /*background: linear-gradient(to top, transparent, #121212ff);*/
-
-    /*filter: drop-shadow(0 -0.1rem 0.05rem var(--pri-color-1));*/
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
 
     border-radius: 1rem;
     padding: 8px;
+    margin-inline: 16px;
 
     & span {
         font-family: var(--font-poppins);
@@ -62,8 +58,6 @@ body {
 }
 
 footer {
-    margin-block: 32px;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -142,12 +136,6 @@ footer {
     transform: rotate(225deg);
 }
 
-.footerLinkHeader{
-    color: var(--accent-color-1);
-    display: block;
-
-    margin-block: .25rem;
-}
 
 .link-size-1{
     font-size: 12px;
@@ -173,39 +161,7 @@ footer {
 }
 
 
-#footerWrapper {
-    gap: 16px;
-    margin-inline: auto;
-    margin-block: 0px;
-    max-width: var(--cutoffSize);
 
-
-    border-bottom: 1px;
-    border-top: 1px;
-    border-inline: 1px;
-    border-color: var(--pri-color-1);
-    border-style: solid;
-
-    padding-block: 32px;
-
-    border-radius: 1rem;
-
-    & img {
-        height: 32px;
-        width: 32px;
-    }
-
-    & #footerLinks {
-        color: var(--pri-color-1);
-
-        display: flex;
-        flex-direction: row;
-        align-items: start;
-
-        justify-content: space-evenly;
-        width: 100%;
-    }
-}
 
 #stickyNavWrapper {
     top: 16px;
@@ -252,10 +208,15 @@ footer {
         align-items: center;
 
         margin-block: 32px;
-    }
+        margin-inline: 16px;
 
-    & h1 {
-        font-size: 3rem;
+        & p{
+            text-align: center;
+        }
+
+        & h1 {
+            font-size: 3rem;
+        }
     }
 }
 
@@ -281,7 +242,7 @@ footer {
 
     display: block;
     position: absolute;
-    right: 0;
+    right: 16px;
     top: 72px;
     margin-block: auto;
     width: 90vw;
@@ -289,9 +250,12 @@ footer {
     height: fit-content;
 
     background: rgba(255, 255, 255, .25);
-    border: 1px solid rgba(127, 127, 127, .25);
+    border: 1px solid rgba(127, 127, 127, .5);
     box-shadow: 0 2px .25rem rgba(127, 127, 127, .5);
     border-radius: 1rem;
+
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
 
     & ul {
         padding: 32px;
@@ -340,15 +304,60 @@ footer {
     display: none;
 }
 
-#legal_disclaimer{
-    max-width: 256px;
+#navDropdown{
 
-    & i{
-        font-size: .6rem;
-    }
 }
 
-#navDropdown{
+#footerWrapper {
+    gap: 16px;
+    margin-inline: auto;
+    margin-block: 0px;
+    max-width: var(--cutoffSize);
+
+    padding-block: 32px;
+
+    background-color: var(--accent-color-1);
+
+    & img {
+        height: 32px;
+        width: 32px;
+    }
+
+    & #footerLinks {
+        color: var(--pri-color-1);
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+
+        justify-content: space-evenly;
+        width: 100%;
+
+        & div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    & .footerLinkHeader{
+        color: var(--sec-color-1);
+        display: block;
+        text-align: center;
+
+        margin-block: .25rem;
+    }
+
+    & #legal_disclaimer{
+        max-width: 256px;
+        text-align: center;
+
+        & i{
+            font-size: .6rem;
+
+        }
+    }
 
 }
 
